fix issue with --init umap. add ui for align umap and truncate embeddings. start adding info tooltips.

--- a/web/src/components/Setup/Embedding.module.css
+++ b/web/src/components/Setup/Embedding.module.css
@@ -13,3 +13,10 @@
 .embeddings-list input, .embeddings-list label {
   cursor: pointer;
 }
+
+.truncate {
+  display: flex;
+  flex-direction: row;
+  gap: 4px;
+  margin: 6px 0;
+}
